wp-content/themes/ivan-kocka-child/style.css
/* ... */
.yith-ajaxsearchform-container form > div:after {
  content: "\f002";
  color: #fff;
  position: absolute;
  right: 1.3em;
  top: 1.3em;
  cursor: pointer;
  box-shadow: #463752 -1px 2px 0 19px;
  background-color: #463752;
  display: inline-block;
  font: normal normal normal 14px/1 FontAwesome;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}


.woocommerce .quantity input.qty, .woocommerce-page .quantity input.qty {
    border-style: solid !important;
    border-width: 1px !important;
}


div.woof_info_popup{
    background-image: url('images/pinloader.gif');
    background-repeat: no-repeat;
    background-color: #fff;
    text-indent: -1000px;
    padding: 2em;
    background-position: center;
    width: 150px;
    opacity: 1 !important;
    border-radius: 0;
}

.woof_show_auto_form {
  display: none !important;
}

#iv-layout-title-wrapper#iv-layout-title-wrapper{
    background-color: #f9f9f9;
}

.header-right-area .col-md-5{
    width:30%;
}

#main-div#main-div{
    z-index: 999999;
}

.webdesign-newsLetter .subscribeThreebutton,.webdesign-newsLetter .close-button{
    background-color: #463752 !important;
}

.webdesign-newsLetter.webdesign-newsLetter .upper-div h1{
    color: #000000;
    font-size: 25px;
    padding: 20px 0 0 0;
    font-style: inherit;
    font-family: "Open Sans";
    font-weight: 500;
    letter-spacing: inherit;
}

.webdesign-newsLetter .lower-div{
    background-size: cover !important;
}


.webdesign-newsLetter.webdesign-newsLetter form{
    margin: 0;
}

.webdesign-newsLetter.webdesign-newsLetter .email-textbox{
    padding: 10px;
    font-family: "Open Sans";
    color: #000 !important;
}

.webdesign-newsLetter.webdesign-newsLetter .email-textbox::-webkit-input-placeholder{
    color: #000 !important;
}

.webdesign-newsLetter.webdesign-newsLetter .email-textbox::-moz-placeholder{
    color: #000 !important;
}

.yith-ajaxsearchform-container form .yith-s::-webkit-input-placeholder{
    color: #000 !important;
}

.yith-ajaxsearchform-container form .yith-s::-moz-placeholder {
    color: #000 !important;
}


.webdesign-newsLetter.webdesign-newsLetter .subscribeThreebutton{
    padding: 11px 15px;
    margin: 0;
    font-family: "Open Sans";
}
.error_container.error_container{
    font-weight: 600;
    font-size: 1.2em;
}

.webdesign-newsLetter.webdesign-newsLetter .thanksText{
    font-weight: 600;
    font-size: 1.15em;
    margin-bottom: -20px;
    color: #fff;
    font-family: "Open Sans";
    margin-top: 1em;
}

.webdesign-newsLetter.webdesign-newsLetter .close-button{
    right: -12px !important;
    top: -16px !important;
}

.lower-div:after{
    content: '';
    position: absolute;
    top: 0;
    width:  100%;
    height: 100%;
    left:  0;
    background-color: rgba(0,0,0,0.5);
}

.subscribe-box-form{
    position:  relative;
    z-index:  1;
}


.webdesign-newsLetter .close-button:before, .close-button:after{
    background-color: #fff !important;
}

// .webdesign-newsLetter .thanksText:hover{
//  color: #000;
// }

.newsletter-box.newsletter-box .subscribe-button{
    background-color: #463752 !important;
    padding: 10px;
}


.blog .container h2{
    margin: 0 auto !important;
}

.woof_sid_auto_shortcode{
  display: none !important;
}


@media screen and (max-width: 650px){
    body{
        position: relative;
    }
    #main-div.subscribebox_1 {
        right: 0;
        margin: 0;
        max-width: 100%;
        bottom: 0;
        position: absolute;
        height: 100%;
    }
    .subscribebox_1 .webdesign-newsLetter,.subscribebox_2 .webdesign-newsLetter{
        max-width: 100%;
    }
    .subscribebox_1 .webdesign-newsLetter .lower-div,.subscribebox_2 .webdesign-newsLetter .lower-div{
        max-width: 100%;
    }
    .subscribebox_1 .webdesign-newsLetter p,.subscribebox_2 .webdesign-newsLetter p{
        font-size: 15px;
        line-height: 22px;
    }
    .subscribebox_1 .webdesign-newsLetter .close-button,.subscribebox_2 .webdesign-newsLetter .close-button{
        top: -20px !important;
    }
    .subscribebox_1 .webdesign-newsLetter.webdesign-newsLetter .subscribeThreebutton,.subscribebox_2 .webdesign-newsLetter.webdesign-newsLetter .subscribeThreebutton{
        margin-top: 1em;
        font-size: 0.8em;
    }
    .subscribebox_1 .webdesign-newsLetter.webdesign-newsLetter .thanksText,.subscribebox_2 .webdesign-newsLetter.webdesign-newsLetter .thanksText{
        font-size: 1.05em;
    }
    .woocommerce ul.products li.product, .woocommerce-page ul.products li.product{
        width: calc(50% - 10px);
    }
}

